# Qt-MyKeyBoard

./: CMakeLists.txt  MyKeyBoard_global.h
Keyboard/: AbstractKeyboard.h  KeyButton.h  Keyboard.cpp  Keyboard.h
